--- a/syle.css
+++ b/syle.css
@@ -1,79 +1,100 @@
-body{
-    margin: 0.1em 0;
-    padding: 2em;
-    background: #E5E5E5;
-    font-family: 'Inter', sans-serif;
+body {
+  margin: 0.1em 0;
+  padding: 2em;
+  background: #F3F5FC;
+  font-family: "Inter", sans-serif;
 }
-.logo{
-    width: 7em;
-}
-
-section{
-    margin: 2em;    
+.logo {
+  width: 7em;
 }
 
-.texto1{
-    display: inline-block;    
-    width: 50em;
-    height: 32em;
-    text-align: center;
-
+section {
+  margin: 2em;
 }
 
-.div-texto{
-    display: grid;
+.texto1 {
+  display: inline-block;
+  width: 50em;
+  height: 32em;
+  text-align: center;
 }
-.text-area1{
-    text-align: center;
-    color: #0A3871;
-    background: #E5E5E5;
-    font-size: 30px;
-    margin-bottom: 12px;
-    border: none;
-    resize: none;
-}
-::placeholder{
-    color: #0A3871;
-    font-size: 30px;
-    border: none;
-    font-family: 'Inter', sans-serif;
-    font-weight: bold;
 
+.div-texto {
+  display: grid;
 }
-.btn-encriptado{
-    text-align: center;
+.text-area1 {
+  text-align: center;
+  color: #0a3871;
+  background: #F3F5FC;
+  font-size: 30px;
+  margin-bottom: 12px;
+  border: none;
+  resize: none;
 }
-.mensaje{
-    margin-bottom: 12px;
-    font-size: 13px;
+::placeholder {
+  color: #0a3871;
+  font-size: 30px;
+  border: none;
+  font-family: "Inter", sans-serif;
+  font-weight: bold;
 }
-.mensaje span{
-    margin-right:19.3em;
+.btn-encriptado {
+  text-align: center;
 }
-.btn-encriptar{
-    width: 18em;
-    height: 3em;
-    border-radius: 16px;
-    background: #0A3871;
-    color: #D8DFE8;
-    border: 1px solid #0A3871;
-    
+.mensaje {
+  margin-bottom: 12px;
+  font-size: 13px;
 }
-.btn-desencriptar{
-    width: 18em;
-    height: 3em;
-    border-radius: 16px;
-    background: #D8DFE8;
-    color: #0A3871;
-    border: 1px solid #0A3871;
+.mensaje span {
+  margin-right: 19.3em;
 }
-.texto2{
-    text-align: center;
-    position: absolute;
-    margin: -6em 0;
-    display: inline-block;
-    width: 20em;
-    height: 38.5em;
-    border-radius: 20px;
-    background: #fff;
+.btn-encriptar {
+  width: 18em;
+  height: 3em;
+  border-radius: 16px;
+  background: #0a3871;
+  color: #d8dfe8;
+  border: 1px solid #0a3871;
+}
+.btn-desencriptar {
+  width: 18em;
+  height: 3em;
+  border-radius: 16px;
+  background: #d8dfe8;
+  color: #0a3871;
+  border: 1px solid #0a3871;
+}
+.texto2 {
+  text-align: center;
+  position: absolute;
+  margin: -5em 3em;
+  display: inline-block;
+  width: 20em;
+  height: 38.5em;
+  border-radius: 20px;
+  background: #fff;
+/* shadow */
+
+box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+border-radius: 32px;
+}
+.imagen2 {
+  width: 85%;
+  margin-top: 9em;
+}
+.descripcion {
+  text-align: center;
+}
+.primera-descripcion {
+  color: #343a40;
+  font-size: 24px;
+  font-style: normal;
+  line-height: 120%;
+  font-weight: 700;
+}
+.segunda-descripcion {
+  color: #495057;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
 }
