--- a/syle.css
+++ b/syle.css
@@ -1,7 +1,7 @@
 body {
   margin: 0.1em 0;
   padding: 2em;
-  background: #F3F5FC;
+  background: #f3f5fc;
   font-family: "Inter", sans-serif;
 }
 .logo {
@@ -25,11 +25,15 @@ section {
 .text-area1 {
   text-align: center;
   color: #0a3871;
-  background: #F3F5FC;
+  background: #f3f5fc;
   font-size: 30px;
   margin-bottom: 12px;
   border: none;
   resize: none;
+}
+.text-area1:focus{
+  background-color: #f3f5fc;
+  outline: auto;
 }
 ::placeholder {
   color: #0a3871;
@@ -51,7 +55,7 @@ section {
 .btn-encriptar {
   width: 18em;
   height: 3em;
-  border-radius: 16px;
+  border-radius: 24px;
   background: #0a3871;
   color: #d8dfe8;
   border: 1px solid #0a3871;
@@ -59,7 +63,7 @@ section {
 .btn-desencriptar {
   width: 18em;
   height: 3em;
-  border-radius: 16px;
+  border-radius: 24px;
   background: #d8dfe8;
   color: #0a3871;
   border: 1px solid #0a3871;
@@ -73,10 +77,10 @@ section {
   height: 38.5em;
   border-radius: 20px;
   background: #fff;
-/* shadow */
+  /* shadow */
 
-box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
-border-radius: 32px;
+  box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+  border-radius: 32px;
 }
 .imagen2 {
   width: 85%;
@@ -97,4 +101,36 @@ border-radius: 32px;
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
+}
+.div-texto2-encontrado {
+  text-align: center;
+  position: absolute;
+  margin: -5em 3em;
+  display: none;
+  width: 20em;
+  height: 38.5em;
+  border-radius: 20px;
+  background: #fff;
+  /* shadow */
+  box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+  border-radius: 32px;
+}
+.btn-copiar {
+  width: 18em;
+  height: 3em;
+  border: 1px solid #0a3871;
+  border-radius: 24px;
+  background: #fff;
+  color: #0a3871;
+}
+.text-area2{
+  margin-top: 2em;
+  margin-bottom: 1em;
+  resize: none;
+  border: none;
+  font-size: 18px;
+  color: #495057;
+}
+.text-area2:focus{
+  outline: none;
 }
