--- a/syle.css
+++ b/syle.css
@@ -17,23 +17,23 @@ section {
   width: 50em;
   height: 32em;
   text-align: center;
+  padding: 0 4em;
 }
 
 .div-texto {
   display: grid;
 }
 .text-area1 {
-  text-align: center;
   color: #0a3871;
   background: #f3f5fc;
   font-size: 30px;
   margin-bottom: 12px;
   border: none;
   resize: none;
+
 }
 .text-area1:focus{
-  background-color: #f3f5fc;
-  outline: auto;
+  outline: none;
 }
 ::placeholder {
   color: #0a3871;
@@ -48,6 +48,7 @@ section {
 .mensaje {
   margin-bottom: 12px;
   font-size: 13px;
+  transition: font-size 1s;
 }
 .mensaje span {
   margin-right: 19.3em;
@@ -71,10 +72,10 @@ section {
 .texto2 {
   text-align: center;
   position: absolute;
-  margin: -5em 3em;
+  margin: -5em -2em;
   display: inline-block;
   width: 20em;
-  height: 38.5em;
+  height: 37.3em;
   border-radius: 20px;
   background: #fff;
   /* shadow */
@@ -105,10 +106,10 @@ section {
 .div-texto2-encontrado {
   text-align: center;
   position: absolute;
-  margin: -5em 3em;
+  margin: -5em -2em;
   display: none;
   width: 20em;
-  height: 38.5em;
+  height: 37.3em;
   border-radius: 20px;
   background: #fff;
   /* shadow */
@@ -134,3 +135,22 @@ section {
 .text-area2:focus{
   outline: none;
 }
+
+@media screen and (max-width:480px){
+  .texto1{
+    width: 70%;
+    padding-left: 0em;
+  }
+  .texto2{
+    margin-top: 40em;
+    margin-left: -18em;
+  }
+  .div-texto2-encontrado{
+    margin-top: 40em;
+    margin-left: -18em;
+  }
+  .imagen2{
+    display: none;
+  }
+  
+ }
