--- a/syle.css
+++ b/syle.css
@@ -1,16 +1,16 @@
 body {
-  margin: 0.1em 0;
+  margin: 0 0;
   padding: 2em;
   background: #f3f5fc;
   font-family: "Inter", sans-serif;
   overflow-x: hidden;
-  overflow-y: hidden;
 }
 .logo {
   width: 6em;
+  display: inline-block;
 }
 
-.texto1 {
+.div-principal {
   margin-left: 4em;
   display: inline-block;
   width: 35em;
@@ -22,6 +22,7 @@ body {
 .div-texto {
   display: grid;
 }
+
 .text-area1 {
   color: #0a3871;
   background: #f3f5fc;
@@ -51,9 +52,11 @@ body {
   font-size: 13px;
   transition: font-size 1s;
 }
+
 .mensaje span {
   margin-right: 19.3em;
 }
+
 .btn-encriptar {
   width: 18em;
   height: 3em;
@@ -70,11 +73,12 @@ body {
   color: #0a3871;
   border: 1px solid #0a3871;
 }
+.div-secundario{
+  display: inline-block;
+  margin-left: 7em;  
+}
 .texto2 {
   text-align: center;
-  position: absolute;
-  margin: -3em 7em;
-  display: inline-block;
   width: 20em;
   height: 32em;
   border-radius: 20px;
@@ -84,6 +88,18 @@ body {
   box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
   border-radius: 32px;
 }
+.div-texto2-encontrado {
+  text-align: center;
+  display: none;
+  width: 20em;
+  height: 32em;
+  border-radius: 20px;
+  background: #fff;
+  /* shadow */
+  box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+  border-radius: 32px;
+}
+
 .imagen2 {
   width: 85%;
   margin-top: 5em;
@@ -104,19 +120,7 @@ body {
   font-size: 16px;
   line-height: 150%;
 }
-.div-texto2-encontrado {
-  text-align: center;
-  position: absolute;
-  margin: -3em 7em;
-  display: none;
-  width: 20em;
-  height: 32em;
-  border-radius: 20px;
-  background: #fff;
-  /* shadow */
-  box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
-  border-radius: 32px;
-}
+
 .btn-copiar {
   width: 18em;
   height: 3em;
@@ -139,36 +143,32 @@ body {
 }
 
 .creditos{
-  background: #0a3871;
-  width: 88em;
-  height: 6.5em;
-  margin-left: -2em;
-  margin-top:2em;
+  background: #3c4755;
+  width: 100%;
+  height: 7.8%;
+  position: absolute;
+  margin: -2em;
+  margin-top: 2.5em;
 }
 p.nombre{
   color: #d8dfe8;
   text-align: center;
-  padding-top: 1em;
+  padding-top: 0em;
   font-weight: bold;
 }
 .img-git{
   width: 1.5em;
 }
 @media screen and (max-width:480px){
-  .texto1{
-    width: 70%;
-    padding-left: 0em;
-  }
-  .texto2{
-    margin-top: 40em;
-    margin-left: -18em;
-  }
-  .div-texto2-encontrado{
-    margin-top: 40em;
-    margin-left: -18em;
+
+  .div-principal{
+    width: 100%;
   }
   .imagen2{
     display: none;
   }
-  
+  .creditos{
+    /*margin: 10em;*/
+    width: 36em;
+  }
  }
